# pyproject_setup

./: README.md  pyproject.toml
project/pkg1/: t1.py
project/pkg2/: t2.py
